theory of Bloch-Floquet th

--- a/fdphd.bib
+++ b/fdphd.bib
@@ -381,7 +381,19 @@ Terahertz spectroscopy of ferroelectrics and related materials
   year={2010},
   publisher={Springer}
 }
-
+@article{johnson2003introduction,
+  title={Introduction to photonic crystals: Bloch’s theorem, band diagrams, and gaps (but no defects)},
+  author={Johnson, Steven G and Joannopoulos, John D},
+  journal={Photonic Crystal Tutorial},
+  pages={1--16},
+  year={2003}
+}
+@article{ashcroft2005solid,
+  title={Solid State Physics (Holt, Rinehart and Winston, New York, 1976)},
+  author={Ashcroft, Neil W and Mermin, N David},
+  journal={There is no corresponding record for this reference},
+  year={2005}
+}
 /*}}}*/
 %  -- generic theory --/*{{{*/
 @article{pendry1996extremely,
