--- a/intro.tex
+++ b/intro.tex
@@ -1,7 +1,7 @@
 \section{Introduction} % TODO
 
-\paragraph{Electromagnetism of complex structures}
-The behaviour of electromagnetic waves in periodic media has attracted the human attention for ages, long before anybody perceived that light is an \textit{electromagnetic wave} or that it is the \textit{periodicity} that is responsible for the brilliant and irreproducible colours of opal gemstones and many living creatures, such as various beetles, butterflies, peacocks etc. %{{{
+\paragraph{Electromagnetism of complex structures} %{{{
+The behaviour of electromagnetic waves in periodic media has attracted the human attention for ages, long before anybody perceived that light is an \textit{electromagnetic wave} or that it is the \textit{periodicity} that is responsible for the brilliant and irreproducible colours of opal gemstones and many living creatures, such as various beetles, butterflies, peacocks etc. 
 The scientific community started to study the underlying phenomena in the late 19th century when the X-ray scattering was observed on (periodic) crystal lattices and also when the high optical reflection from periodic layers of entirely transparent materials was predicted. % TODO ref
 %The technological and scientific boom of the 20th century contributed with many new theoretical approaches, numerical methods and types of periodic structures to the newly born field of \textit{photonics}. With the advent of the 21th century, great progress was also made in the research of \textit{metamaterials}, a specific subset of periodic structures which will be discussed in greater detail in this work. 
 % TODO motivation - finish
@@ -22,8 +22,8 @@ Yet none of these approaches is optimal for the THz applications; from the elect
 
 % TODO THz MM review 
 
-
-\paragraph{Outline of the thesis}
+%}}}
+\paragraph{Outline of the thesis} %{{{
 % TODO  cíle disertace
 Many different designs of metamaterials  % and photonic crystals
 were proposed in the last decades, part of them being aimed to the terahertz range. %They have been also summed by several books and reviews % TODO refs x5
@@ -49,14 +49,15 @@ Last but not least, the dissertation involved the development of a reliable plat
 % TODO Where appropriate, we also investigated how this behaviour depends on some external parameter (such as electric field, temperature or illumination) -- in other words, how the \textit{tunability} of the structure can be achieved.
 %In the last section, some general conclusions and prospects are drawn.
 
-\paragraph{The conventions used}
-Thorough the thesis, we use a single or double apostrophe ($x', x''$) to refer to the real and imaginary part of a complex numberl ($x$). Italic symbols (e.g. $k$) represent the magnitudes of vectors, which are denoted by respective bold symbols (e.g. $\kk$). 
+%}}}
+\paragraph{The conventions used}%{{{
+Thorough the thesis, we use a single or double apostrophe ($x', x''$) to refer to the real and imaginary part of a complex numberl ($x$). Italic symbols (e.g. $k$) represent the magnitudes of vectors, which are denoted by respective bold symbols (e.g. $k = |\kk|$). Components of vectors are denoted by small indices, such as $k_x, k_y, k_z$.
 
-The explicit time, space or frequency dependence of quantities are omitted when it . So for electric field we write $\E$ instead of $\E(\rr,t)$.
+The explicit time, space or frequency dependence of quantities are omitted when it does not allow confusion. So for electric field we write $\E$ instead of $\E(\rr,t)$.
 
 An important note shall be made on the sign convention for the complex wave, introduced in Eq. \ref{eq_pw}.
 We use the `engineering' convention of time dependence: $e^{+\ii \omega t}$, but this is only due to the author's feeling that it is more natural when the wave phase grows in time. 
-It is used in  roughly a half of the literature (e.g. \cite[p. 9]{engheta2006book}, \cite[pp. 21, 99]{krowne2007book}, \cite[chap. 1-4, 6, 9, 10]{eleftheriades2005book}).  In the remaining half, (e.g. \cite[chap. 5, 7, 8]{eleftheriades2005book}), \cite{jackson1962book}, \cite{veselago1968}, \cite{born1999book}, \cite[p. 5]{noginov2011book}), the opposite, `optical', convention is used with time dependence of $e^{-\ii \omega t}$. The choice of $e^{+\ii\omega t}$ or $e^{-\ii\omega t}$ determines the sign of the imaginary part in virtually all complex quantities discussed in this thesis, but with correct interpretation it makes no difference in the physical conclusions as it is only a formal simplification.
+It is used in  roughly a half of the literature (e.g. \cite[p. 9]{engheta2006book}, \cite[pp. 21, 99]{krowne2007book}, \cite[(Chapters 1-4, 6, 9, 10)]{eleftheriades2005book}).  In the remaining half, (e.g. \cite[(Chapters 5, 7, 8)]{eleftheriades2005book}), \cite{jackson1962book}, \cite{veselago1968}, \cite{born1999book}, \cite[p. 5]{noginov2011book}), the opposite, `optical', convention is used with time dependence of $e^{-\ii \omega t}$. The choice of $e^{+\ii\omega t}$ or $e^{-\ii\omega t}$ determines the sign of the imaginary part in virtually all complex quantities discussed in this thesis, but with correct interpretation it makes no difference in the physical conclusions as it is only a formal simplification.
 In the real world, observable fields do not have any imaginary component so the real part of the result has to be taken. 
 %% ---- "ENGINEERING" in favor of +iwt , and then perhaps using eps = (eps' - i eps''), or getting along with all-negative eps''
 %% https://www.comsol.com/support/knowledgebase/1009/    
@@ -67,4 +68,5 @@ In the real world, observable fields do not have any imaginary component so the 
 In the $e^{+\ii\omega t}$ convention, many parameters of a passive (lossy) system are restricted to have \textit{negative imaginary part}.  An additional complication arises from that a part of the authors using $e^{+\ii\omega t}$ convention wish to represent the imaginary part as \textit{positive}, and they define complex quantities as, e.g., $\varepsilon = \varepsilon' - \ii \varepsilon''$, % TODO verify if this is e.g. "Wallen2011-Anti-resonant response of ..."
 thus in their case $\varepsilon''\equiv -\text{Im}(\varepsilon)$. Thorough the thesis, we however represent the real and imaginary parts naturally as $\varepsilon := \varepsilon' + \ii \varepsilon''$.
 
-The unit system differs  thorough the literature, too. Some of the references, e.g. \cite{landau1984electrodynamics, agranovich2006spatial, krowne2007book} use the older centimeter-gram-second (CGS) system, which for instance leaves out the dimension constants of $\varepsilon_0, \mu_0$. Whole thesis consistently uses the meter-kilogram-second (or, SI) system.
+The unit system differs thorough the literature, too. Some of the references, e.g. \cite{landau1984electrodynamics, agranovich2006spatial, krowne2007book_agran} use the older centimeter-gram-second (CGS) system, which for instance leaves out the dimension constants of $\varepsilon_0, \mu_0$. Whole thesis consistently uses the meter-kilogram-second (or, SI) system.
+%}}}
