--- a/appendices.tex
+++ b/appendices.tex
@@ -67,7 +67,7 @@ $\epsrl(\omega)$ &Relative permittivity in the local approximation\\
 $\murl(\omega)$ &Relative permeability in the local approximation\\
 $\epsrn(\omega, \kk)$ &Relative permittivity for nonlocal media\\
 $\murn(\omega, \kk)$ &Relative permeability for nonlocal media\\
-$\epsLL(\omega, \kk)$ &Relative permittivity in the Landau-Lifshitz formulation\\
+$\epsLL(\omega, \kk)$ &Relative permittivity in the Landau-Lifshitz ($\E\D\B$) formulation\\
 %% TODO add eps, epsLL, mu_r, mu_LL, and distinguish between the symmetric and Landau-Lifshitz form
 $\chi_e$, $\chi_m$ 	& Electric and magnetic susceptibility\\
 $\Neff$ 	& Effective index of refraction (of periodic medium)\\
